# shkandal

./: .dockerignore  .env.example  .env.production.example  .env.worker-remote.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.demo.yaml  docker-compose.prod.yaml  docker-compose.worker-remote.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/backend/: .env.example  Dockerfile  config.toml  config.yaml  pyproject.toml
apps/backend/src/shkandal_backend/: __init__.py  app.py  config.py  image_urls.py  main.py  observability.py  public_repository.py  routes.py  schemas.py  seed_demo.py
apps/backend/tests/: seed_public_e2e.py
apps/backend/tests/shkandal_backend/: test_app.py  test_image_urls.py  test_observability.py  test_public_api.py  test_public_repository.py  test_seed_demo.py
apps/frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.json
apps/worker-ingestion/: .env.example  Dockerfile  config.toml  config.yaml  pyproject.toml
apps/worker-ingestion/scripts/: article_coverage.py  article_coverage_report.py  reset_failed_fetches.py  sync_source_logos.py  validate_sources.py
apps/worker-ingestion/src/worker_ingestion/: __init__.py  article_coverage.py  config.py  extractor.py  healthcheck.py  identity.py  main.py  repair.py  runtime.py  service.py  sitemap.py  source_logos.py  sources.py  storage.py  transport.py
apps/worker-ingestion/src/worker_ingestion/articles/: __init__.py  extractor.py
apps/worker-ingestion/src/worker_ingestion/discovery/: __init__.py  sitemap.py  sources.py
apps/worker-ingestion/src/worker_ingestion/maintenance/: __init__.py  repair.py
apps/worker-ingestion/src/worker_ingestion/persistence/: __init__.py  articles.py
apps/worker-ingestion/tests/worker_ingestion/: conftest.py  test_article_coverage.py  test_ingestion_config.py  test_ingestion_entrypoint.py  test_ingestion_extractor.py  test_ingestion_identity.py  test_ingestion_main.py  test_ingestion_package.py  test_ingestion_repair.py  test_ingestion_runtime.py  test_ingestion_service.py  test_ingestion_sitemap.py  test_ingestion_sources.py  test_ingestion_storage.py  test_ingestion_transport.py  test_source_logos.py
apps/worker-ml/: .env.example  Dockerfile  config.toml  config.yaml  pyproject.toml
apps/worker-ml/src/worker_ml/: __init__.py  article_cards.py  case_audits.py  case_resolution.py  classifier.py  config.py  embeddings.py  enqueue_case_audits.py  enqueue_case_resolution_jobs.py  identity_resolution.py  jobs.py  main.py  recover_failed_jobs.py  reprocess_article_cards.py  reset_unconnected_case_resolution_jobs.py  vector_index.py
apps/worker-ml/src/worker_ml/articles/: cards.py  gates.py  relevance.py
apps/worker-ml/src/worker_ml/cases/: audits.py  connectivity_report.py  copy.py  publication.py  refresh.py  resolution.py  reviews.py
apps/worker-ml/src/worker_ml/identities/: decisions.py  payloads.py  resolution.py
apps/worker-ml/src/worker_ml/llm/: __init__.py  budgeting.py  contracts.py  normalization.py  prompts.py  runner.py  runs.py  schema.py  tasks.py
apps/worker-ml/src/worker_ml/llm/contracts/: __init__.py  articles.py  cases.py  identities.py  types.py
apps/worker-ml/src/worker_ml/llm/prompts/: article_card.uk.md  article_gate.uk.md  case_coherence_audit.uk.md  case_copy_update.uk.md  case_creation_after_dropped_links.uk.md  case_duplicate_audit.uk.md  case_link_audit.uk.md  case_public_interest_audit.uk.md  case_resolution.uk.md  entity_resolution.uk.md  event_resolution.uk.md  repair.uk.md
apps/worker-ml/src/worker_ml/retrieval/: vector_index.py
apps/worker-ml/src/worker_ml/runtime/: application.py  assembly.py  execution.py  planning.py
apps/worker-ml/src/worker_ml/scripts/: __init__.py  case_resolution_connectivity_report.py  enqueue_case_audits.py  enqueue_case_resolution_jobs.py  recover_failed_jobs.py  reprocess_article_cards.py  reset_unconnected_case_resolution_jobs.py
apps/worker-ml/tests/worker_ml/: test_article_cards.py  test_article_gates.py  test_case_audits.py  test_case_refresh.py  test_case_resolution.py  test_case_resolution_connectivity_report.py  test_case_reviews.py  test_embeddings.py  test_enqueue_case_resolution_jobs.py  test_identity_resolution.py  test_llm_budgeting.py  test_llm_contracts.py  test_llm_normalization.py  test_llm_prompts.py  test_llm_runner.py  test_llm_runs.py  test_llm_schema.py  test_ml_jobs.py  test_ml_main.py  test_recover_failed_jobs.py  test_reprocess_article_cards.py  test_reset_unconnected_case_resolution_jobs.py  test_vector_index.py
docs/: PRD.md  VISION.md  deploy-digitalocean.md  run-project.md  sources.md
docs/adr/: 0001-llm-provider-boundary.md  0002-serialize-case-mutations.md  0003-publish-case-splits-atomically.md  0004-automatic-ordered-case-audits.md  0005-derive-other-cases-from-shared-evidence.md  0006-threshold-case-refresh.md
docs/system/: README.md  public-reader-experience.md
infra/caddy/: Caddyfile
infra/litellm/: .env.example  (+1 more)
ops/: deploy-production  install-remote-worker-user-systemd.sh  install-systemd.sh  install-user-systemd.sh  remove-orphaned-worker-oneoffs  run-db-tunnel  run-migrations  run-remote-worker  run-scheduled-worker
scripts/: reset_demo.sh  reset_postgres_qdrant.sh  run_demo.sh  run_e2e.sh
(+67 files in other folders)
