[project]
name = "shkandal"
version = "0.1.0"
description = "Structured public case tracking for Ukrainian media stories."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
managed = true
package = false

[tool.uv.workspace]
members = [
    "apps/backend",
    "apps/worker-ingestion",
    "apps/worker-ml",
    "packages/database",
    "packages/common",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
mypy_path = [
    "apps/backend/src",
    "apps/worker-ingestion/src",
    "apps/worker-ml/src",
    "packages/database/src",
    "packages/common/src",
]
files = ["apps", "packages"]

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "*.tests.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["apps", "packages"]
addopts = """
    -v
    --cov=apps
    --cov=packages
    --cov-report=term-missing
    --cov-fail-under=80
"""
asyncio_mode = "auto"
pythonpath = [
    "apps/backend/src",
    "apps/worker-ingestion/src",
    "apps/worker-ml/src",
    "packages/database/src",
    "packages/common/src",
]

[tool.coverage.run]
data_file = ".pytest_cache/.coverage"
omit = [
    "*/tests/*",
    "*__init__.py",
]
