[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shkandal-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.5",
    "shkandal-common",
    "shkandal-database",
    "uvicorn[standard]>=0.38.0",
]

[tool.uv.sources]
shkandal-common = { workspace = true }
shkandal-database = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/shkandal_backend"]
