[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shkandal-worker-ingestion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "curl-cffi>=0.11.4",
    "httpx>=0.28.1",
    "pillow>=11.3.0",
    "pydantic>=2.12.5",
    "shkandal-common",
    "shkandal-database",
    "trafilatura>=2.0.0",
]

[tool.uv.sources]
shkandal-common = { workspace = true }
shkandal-database = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/worker_ingestion"]
