[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shkandal-worker-ml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "shkandal-common",
]

[tool.uv.sources]
shkandal-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/worker_ml"]
