[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shkandal-worker-ml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.2",
    "pydantic>=2.12.5",
    "scikit-learn==1.8.0",
    "shkandal-common",
    "shkandal-database",
]

[tool.uv.sources]
shkandal-common = { workspace = true }
shkandal-database = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/worker_ml"]
